--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.19.3",
     "bootstrap": "^5.3.6",
+    "firebase": "^11.7.3",
+    "firebase-admin": "^13.4.0",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "react": "^19.0.0",
